UI, shoot sound added and pause logic added

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -49,4 +49,5 @@ ManualIPAddress=
 EditorStartupMap=/Game/Maps/L_Level1.L_Level1
 GameDefaultMap=/Game/Maps/L_Level1.L_Level1
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
