Levels added and Score migrated to GameInstance

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,7 +47,7 @@ ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/L_Level1.L_Level1
-GameDefaultMap=/Game/Maps/L_Level1.L_Level1
+GameDefaultMap=/Game/Maps/L_MainMenu.L_MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
